--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,12 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Paginatore"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Paginatore" Height="350" Width="525">
     <Grid>
-        <Slider x:Name="sliderpart" VerticalAlignment="Top" Margin="15,30,15,0" Value="4" SmallChange="1" Minimum="1" Maximum="8"/>
-        <Slider x:Name="slidermax" VerticalAlignment="Top" Margin="15,60,15,0" Value="100" SmallChange="1" Maximum="100" Minimum="1"/>
+        <Slider x:Name="sliderpart" VerticalAlignment="Top" Margin="25,30,15,0" Value="4" SmallChange="1" Minimum="1" Maximum="8"/>
+        <Slider x:Name="slidermax" VerticalAlignment="Top" Margin="25,60,15,0" Value="100" SmallChange="1" Maximum="100" Minimum="1"/>
         <Button x:Name="buttongo" Content="Go" HorizontalAlignment="Center" Margin="0,100,0,0" VerticalAlignment="Top" Width="75" Click="buttongo_Click"/>
         <TextBox x:Name="textBoxoutput" Margin="25,130,22,25" TextWrapping="Wrap"/>
+        <Label HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,10,0,0" Content="Divisioni" />
+        <TextBlock Text="{Binding Value, ElementName=sliderpart, StringFormat={}{0:0}}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,30,0,0"  TextAlignment="Center"/>
+        <Label HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,40,0,0" Content="Iterazioni" />
+        <TextBlock Text="{Binding Value, ElementName=slidermax, StringFormat={}{0:0}}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,60,0,0" TextAlignment="Center"/>
 
     </Grid>
 </Window>
