--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="Paginatore" Height="350" Width="525">
     <Grid>
-        <Slider x:Name="sliderpart" VerticalAlignment="Top" Margin="25,30,15,0" Value="4" SmallChange="1" Minimum="1" Maximum="8"/>
-        <Slider x:Name="slidermax" VerticalAlignment="Top" Margin="25,60,15,0" Value="100" SmallChange="1" Maximum="100" Minimum="1"/>
+        <Slider x:Name="sliderpart" VerticalAlignment="Top" Margin="25,30,15,0" Value="4" SmallChange="1" Minimum="1" Maximum="8" IsSnapToTickEnabled="True" TickFrequency="1"/>
+        <Slider x:Name="slidermax" VerticalAlignment="Top" Margin="25,60,15,0" Value="100" SmallChange="1" Maximum="100" Minimum="1" IsSnapToTickEnabled="True" TickFrequency="1"/>
         <Button x:Name="buttongo" Content="Go" HorizontalAlignment="Center" Margin="0,100,0,0" VerticalAlignment="Top" Width="75" Click="buttongo_Click"/>
         <TextBox x:Name="textBoxoutput" Margin="25,130,22,25" TextWrapping="Wrap"/>
         <Label HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,10,0,0" Content="Divisioni" />
